# Web-Server

./: MODULE.bazel  Makefile  README.md  server.c  server.h
c-server/: BUILD  server.c
c_server/: Makefile  server.c  server.h
public/: chess.css  chess.html  hello.json
rust-server/: BUILD  Cargo.toml
rust-server/src/: main.rs  server.rs
rust_server/: Cargo.toml
rust_server/src/: main.rs
